crates/hpc-core/tests/compile-fail/api_miss_wait.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/api_miss_wait.rs
  |
  |     let _ = q.enqueue_kernel(&k, buf_inflight);
  |               --------------     ^^^^^^^^^^^^ expected `DeviceBuffer<'_, '_, _, Ready>`, found `DeviceBuffer<'_, '_, u32, InFlight>`
  |               |
  |               arguments to this method are incorrect
  |
  = note: expected struct `DeviceBuffer<'_, '_, _, hpc_core::Ready>`
             found struct `DeviceBuffer<'_, '_, u32, InFlight>`
note: method defined here
 --> src/api.rs
  |
  |     pub fn enqueue_kernel<T>(
  |            ^^^^^^^^^^^^^^
